# stm32vscode

./: .gitignore  CMakeLists.txt  README.md  openocd.cfg  stlink.cfg
GCC/: STM32F103C8TX_FLASH.ld
Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Src/: usbd_cdc.c
Projects/BluePill/: CMakeLists.txt
Projects/BluePill/Examples/: CMakeLists.txt
Projects/BluePill/Examples/I2C/: CMakeLists.txt
Projects/BluePill/Examples/I2C/I2C_TwoBoards_ComPolling/: CMakeLists.txt
Projects/BluePill/Examples/USB/: CMakeLists.txt
Projects/BluePill/Examples/USB/CDC/: CMakeLists.txt  README.md
Projects/BluePill/Examples/USB/CDC/Inc/: stm32f1xx_it.h  usbd_cdc_if.h
Projects/BluePill/Examples/USB/CDC/Src/: main.c  stm32f1xx_it.c
Projects/BluePill/Examples_FreeRTOS/GPIO/Blinky/: CMakeLists.txt
Projects/BluePill/Examples_FreeRTOS/GPIO/Blinky/Inc/: RTE_Components.h  main.h
Projects/BluePill/Examples_FreeRTOS/GPIO/Blinky/Src/: Blinky.c
Projects/BluePill/Examples_LL/GPIO/: CMakeLists.txt
Projects/BluePill/Examples_LL/GPIO/GPIO_InfiniteLedToggling/: CMakeLists.txt
Projects/BluePill/Examples_LL/GPIO/GPIO_InfiniteLedToggling/Src/: main.c
Projects/BluePill/Examples_LL/GPIO/GPIO_InfiniteLedToggling_Init/: CMakeLists.txt
Projects/BluePill/Examples_LL/GPIO/GPIO_InfiniteLedToggling_Init/Inc/: main.h
Projects/BluePill/Examples_LL/GPIO/GPIO_InfiniteLedToggling_Init/Src/: main.c
cmake/: stm32fx.cmake  toolchain-arm-none-eabi.cmake
